2008-11-03  Stephane Delcroix  <sdelcroix@novell.com>

	* gtk/Gtk.metadata:
	* gtk/StatusIcon.custom: Obsolete the duplicated properties.

2008-10-29  Mike Kestner  <mkestner@novell.com>

	* glib/Signal.cs : custom marshaling hooks
	* glib/SignalClosure.cs : support for custom marshalers.

2008-10-28  Stephane Delcroix  <sdelcroix@novell.com>

	* gtk/Gtk.Metadata: hide ConnectSignals.

	* gtk/Builder.Custom: connect the signals, and the objects.
	GetObjectRaw method: allows very neat object inheritance.

2008-10-27  Stephane Delcroix  <sdelcroix@novell.com>

	* glib/ListBase.cs: DataMarshal: create the right object for *Adapter
	list items.

2008-10-08  Mike Gorse  <mgorse@novell.com>

	* atk/Object.custom: Pass Handle in EmitChildrenChanged (fix critical)

2008-10-24  Mike Kestner  <mkestner@novell.com>

	* glib/GType.cs: register IntPtr.

2008-10-22  Peter Johanson  <peter@peterjohanson.com>

	* gtk/TreeModelAdapter.custom:
	* gtk/TreeModelFilter.custom:
	* gtk/TreeModelSort.custom:
	* gtk/TreeStore.custom: Don't trigger any gtk+ critical
	warnings when the 'rows-reodered' signal is fired.

2008-10-21  Mike Kestner  <mkestner@novell.com>

	* tagged 2.12.5.

2008-10-21  Mike Kestner  <mkestner@novell.com>

	* cairo/*: add a policy assembly for 1.0 defering to 2.0.

2008-10-13  Brad Taylor  <brad@getcoded.net>

	* Makefile.am:
	* configure.in.in:
	* gtk-sharp-2.0-lib.wxs.in:
	* gtk-sharp-2.0-dev.wxs.in: Replace version numbers in wxs files,
	  import gtk-sharp-2.0-dev.wxs.

2008-10-13  Mike Kestner  <mkestner@novell.com>

	* Makefile.am: installer target
	* gtk-sharp-2.0-lib.wxs: new installer config file

2008-10-12  Andrés G. Aragoneses  <aaragoneses@novell.com>

	Fixes BNC#426876.
	* generator/InterfaceGen.cs: throw ArgumentNullException in
	the Adapter's constructor that receives an implementor.

2008-10-09  Mike Kestner  <mkestner@novell.com>

	* cairo/*.cs: flatten source hierarchy to simplify win32 build.