@@ -186,3 +186,44 @@
 			NotifyStateChange ((ulong)state, value);
 		}
 
+		[DllImport("atksharpglue-2")]
+		static extern void atksharp_object_override_ref_relation_set (IntPtr type, RefRelationSetDelegate cb);
+		
+		[DllImport("atksharpglue-2")]
+		static extern IntPtr atksharp_object_base_ref_relation_set (IntPtr atk_obj);
+		
+		[GLib.CDeclCallback]
+		delegate IntPtr RefRelationSetDelegate (IntPtr raw);
+		
+		static RefRelationSetDelegate RefRelationSetCallback;
+		
+		static IntPtr RefRelationSet_cb (IntPtr raw)
+		{
+			try {
+				Atk.Object obj = GLib.Object.GetObject (raw, false) as Atk.Object;
+				Atk.RelationSet relation_set = obj.OnRefRelationSet ();
+				if (relation_set != null)
+					g_object_ref (relation_set.Handle);
+				return relation_set == null ? IntPtr.Zero : relation_set.Handle;
+			} catch (Exception e) {
+				GLib.ExceptionManager.RaiseUnhandledException (e, false);
+			}
+		
+			return IntPtr.Zero;
+		}
+		
+		
+		static void OverrideRefRelationSet (GLib.GType gtype)
+		{
+			if (RefRelationSetCallback == null)
+				RefRelationSetCallback = new RefRelationSetDelegate (RefRelationSet_cb);
+			atksharp_object_override_ref_relation_set (gtype.Val, RefRelationSetCallback);
+		}
+		
+		[GLib.DefaultSignalHandler (Type=typeof(Atk.Object), ConnectionMethod="OverrideRefRelationSet")]
+		protected virtual Atk.RelationSet OnRefRelationSet () 
+		{
+			IntPtr raw = atksharp_object_base_ref_relation_set (Handle);
+			return GLib.Object.GetObject (raw, true) as RelationSet;
+		}
+		
