@@ -1,3 +1,15 @@
+2008-11-04  Mike Gorse  <mgorse@novell.com>
+
+	* glib/PtrArray.cs, glib/glue/ptrarray.c, glib/Makefile.am,
+	  glib/glue/Makefile.am, glib/gtype.cs, generator/SymbolTable.cs,
+	  generator/ReturnValue.cs: Add PtrArray.
+	* glib/Marshaller.cs: Add PtrArrayToArray.
+
+	* atk/Atk.metadata: Specify GetTarget return type.
+
+	* atk/Object.custom, atk/glue/object.c: Support overriding
+	  RefRelationSet.
+
 2008-11-03  Stephane Delcroix  <sdelcroix@novell.com>
 
 	* gtk/Gtk.metadata:
